Changes on 07/28/23 Further adjustments for responsiveness. Fixed issue where small gap was visible below footer. Extended minimum height and eliminated box-shadow to correct this.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     width: 100%;
     margin: 0;
     line-height: 30px;
+    min-height: 100vh;
     }
 
 #mainContainer  {
@@ -14,7 +15,6 @@ body {
 
 #subContainer {
     width: 97%;
-    max-width: 40rem;
     align-content: center;
     margin: auto;
     border-top-color: #0613d0;
@@ -357,13 +357,15 @@ footer {
     background-image: linear-gradient(to top, #20b8ff 0%, #68e0cf 100%);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-top: -1rem;
-    min-height: 80px;
-    box-shadow: 0 50vh 0 50vh #20b8ff,
-        0 0 0 2px #20b8ff inset;
+    min-height: 15vh;
     z-index: 1;
     }
 
-
+.footer-bottom
+{
+    position:relative;
+    bottom:0px;
+}
 
 .socialsParent {
     display: flex;
